--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+
+.main{
+    max-width: 82rem;
+    height: auto;
+    padding: 2.5rem;
+    background: #C3E6CD;
+    border-radius: 2.5rem;
+    font-family: 'Inter', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.head{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-bottom: 2.5rem;
+    height: 5.1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.price-tag{
+    font-weight: 700;
+    font-size: 1.3rem;
+    line-height: 1.3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.total{
+    font-weight: 700;
+    font-size: 3.75rem;
+    line-height: 3.4rem;
 }
 
-.App-link {
-  color: #61dafb;
+.heading{
+    font-weight: 400;
+    font-size: 0.8rem;
+    line-height: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-heading{
+    font-weight: 700;
+    font-size: 1 rem;
+    line-height: 1.2rem;
+}
+
+.total-heading{
+    padding-left: auto;
+    width: auto;
+}
+
+.hr-line{
+    border-top: 3px solid black;
+    height: 0;
+    padding-bottom: 2.5rem;
+}
+
+.body{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; 
+    padding-bottom: 40px;
+}
+
+heading{
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+    letter-spacing: -0.24px;
+    color: #000000;
+}
+.section{
+    height: 20rem;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
 }
